Various improvements to split sections: - If left width is 12, hide second section - Fixed widths >= 10 not being recognised - Variable min. height - No onclick error if link id is empty - Add margin to surrounding elements as required to remove overlap

--- a/main/static/css/custom_ckeditor.css
+++ b/main/static/css/custom_ckeditor.css
@@ -96,10 +96,6 @@ p.block {
     outline: 2px dashed grey;
 }
 
-.split-section * {
-    /*min-width: min-content;*/
-}
-
 .cke_widget_wrapper {
     position: unset !important;
 }
@@ -170,4 +166,8 @@ table.styled-table {
 .styled-table tbody tr.active-row {
     font-weight: bold;
     color: #009879;
+}
+
+div.split-section div.hidden {
+    display: none !important;
 }
