--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -134,7 +134,8 @@ body * {
     /*padding-top: 10rem;*/
     margin-top: 0;
     margin-bottom: 0;
-    min-height: 500px;
+    --row-height: 500px;
+    min-height: var(--row-height);
     vertical-align: center;
 }
 
@@ -147,7 +148,7 @@ body * {
     width: 4000px;
     left: -2000px;
     z-index: -1;
-    min-height: 500px;
+    min-height: var(--row-height);
 }
 
 .display-1, .navbar-brand {
